objects/Case.object
<CustomObject>
    <fields>
        <fullName>CS_Last_4_of_Account_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the last 4 digits of the customer&apos;s credit card account number.</inlineHelpText>
        <label>CS Last 4 of Account Number</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Sr_Leadership_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contract Services Senior Leadership Approver</description>
        <inlineHelpText>Contract Services Senior Leadership Approver</inlineHelpText>
        <label>CS Sr Leadership Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CasesSKi1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CS_Tier_2_Escalation_Other__c</fullName>
        <description>Description of &quot;Other Escalation&quot; for Tier 2 escalation.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Provide description of &quot;Other Escalation&quot; for Tier 2 escalation.</inlineHelpText>
        <label>CS Tier 2 Escalation Other</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Tier_2_Escalation_Type__c</fullName>
        <inlineHelpText>If &quot;Other Escalation&quot; is selected, please provide description.</inlineHelpText>
        <label>CS Tier 2 Escalation Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Complaint</fullName>
                </value>
                <value>
                    <fullName>Call-Back or Contact Request</fullName>
                </value>
                <value>
                    <fullName>Negative Feedback</fullName>
                </value>
                <value>
                    <fullName>Escalation to Supervisor at Relationship</fullName>
                </value>
                <value>
                    <fullName>Goodwill or Courtesy Request</fullName>
                </value>
                <value>
                    <fullName>Marketing Opt-Out</fullName>
                </value>
                <value>
                    <fullName>Other Escalation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Center_Capacity_Percent__c</fullName>
        <inlineHelpText>What is the percentage capacity of the call center if operations are shut down and WFH is the only option for call center agents?</inlineHelpText>
        <label>4.10 Call Center Capacity %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Call_Center_Capacity__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>What capacity is the call center anticipated to be operating at during the incident?</inlineHelpText>
        <label>4.06 Call Center Capacity</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Call_Center_Location_Closures__c</fullName>
        <inlineHelpText>Is it anticipated that call center locations will be closed for any period of time?</inlineHelpText>
        <label>4.02 Call Center Location Closures</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Center_Operations_Impact__c</fullName>
        <inlineHelpText>Is it anticipated that the call center operations will be impacted by this incident? If no, skip 4.02 - 4.10</inlineHelpText>
        <label>4.01 Call Center Operations Impact</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Center_Staffing_Reduction__c</fullName>
        <inlineHelpText>Has call center staffing been reduced as a result of the incident or incident response efforts?</inlineHelpText>
        <label>4.03 Call Center Staffing Reduction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Volume_Velocity__c</fullName>
        <inlineHelpText>Are you compensating for in-bound call volume by decreasing or ceasing out-bound calls to ensure that wait times can be reduced as much as possible?</inlineHelpText>
        <label>4.12 Call Volume Velocity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Caller_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the name of the caller or individual submitting the request. If the caller is not the account holder, please verify the caller has permission to speak to the bank on behalf of the account holder.</inlineHelpText>
        <label>Caller Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Caller_Verified_by_Call_Center_Agent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Caller Verified by Call Center Agent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Can_You_Provide_Liquidity_Plans__c</fullName>
        <inlineHelpText>Can you provide your liquidity plans related to this ongoing global situation?</inlineHelpText>
        <label>3.08 Can You Provide Liquidity Plans</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cardholder_Email_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Cardholder Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Cardholder_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Cardholder Name</label>
        <length>85</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cardholder_Phone_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Cardholder Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Case_Heading_or_Matter__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Case Heading or Matter</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <inlineHelpText>Select the category that covers the customer&apos;s complaint</inlineHelpText>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Reporting</fullName>
                </value>
                <value>
                    <fullName>Fees</fullName>
                </value>
                <value>
                    <fullName>Fraud</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Payments</fullName>
                </value>
                <value>
                    <fullName>Servicing</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>Branch Facilities</fullName>
                </value>
                <value>
                    <fullName>System Issue/Error</fullName>
                </value>
                <value>
                    <fullName>Human Error</fullName>
                </value>
                <value>
                    <fullName>Bank Policy</fullName>
                </value>
                <value>
                    <fullName>Privacy</fullName>
                </value>
                <value>
                    <fullName>Mortgage Servicing</fullName>
                </value>
                <value>
                    <fullName>Unfair or Deceptive Practice</fullName>
                </value>
                <value>
                    <fullName>Online Cash Management</fullName>
                </value>
                <value>
                    <fullName>Remote Deposit Capture</fullName>
                </value>
                <value>
                    <fullName>Online Payment Systems</fullName>
                </value>
                <value>
                    <fullName>Account Structure/Billing</fullName>
                </value>
                <value>
                    <fullName>Positive Pay Service</fullName>
                </value>
                <value>
                    <fullName>Lockbox</fullName>
                </value>
                <value>
                    <fullName>Customer Information Update</fullName>
                </value>
                <value>
                    <fullName>Account Research/Inquiry</fullName>
                </value>
                <value>
                    <fullName>Account Maintenance Requests</fullName>
                </value>
                <value>
                    <fullName>Legal Request</fullName>
                </value>
                <value>
                    <fullName>Transactional Issue</fullName>
                </value>
                <value>
                    <fullName>Credit Reporting Disputes</fullName>
                </value>
                <value>
                    <fullName>Courtesy Request</fullName>
                </value>
                <value>
                    <fullName>Customer Assistance</fullName>
                </value>
                <value>
                    <fullName>Special Offer</fullName>
                </value>
                <value>
                    <fullName>Customer Complaint</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Closed_by_Back_Office__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date case is actually completed and closed by back office agent</inlineHelpText>
        <label>Closed by Back Office</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Collateral_Item__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Short name of item presented for approval.</inlineHelpText>
        <label>Collateral Item</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complaint_Escalation__c</fullName>
        <label>Complaint Escalation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Complaint_Logging_Weekdays_Tracking__c</fullName>
        <description>Calculates the number if weekdays between the date TBOM receives a complaint and the date it is logged in Salesforce.</description>
        <formula>(5 * ( FLOOR( ( BLANKVALUE(Datevalue(CreatedDate) , TODAY()) - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( BLANKVALUE(Datevalue(CreatedDate) , TODAY()) - DATE( 1900, 1, 8), 7 ) ) )
-
(5 * ( FLOOR( ( Date_Received_by_TBOM__c - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( Date_Received_by_TBOM__c - DATE( 1900, 1, 8), 7 ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Complaint Logging Weekdays Tracking</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Complaint_Presidential_Escalation__c</fullName>
        <inlineHelpText>Will complaint management and escalated presidential correspondence items be managed or responded to in a timely manner? (If no, please provide explanation)</inlineHelpText>
        <label>5.07 Complaint &amp; Presidential Escalation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Complaint_Sent_to_Relationship__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Complaint Sent to Relationship</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Compliance_Legal_Capacity__c</fullName>
        <inlineHelpText>What capacity are compliance &amp; legal teams anticipated to be operating at during the incident?</inlineHelpText>
        <label>5.04 Compliance &amp; Legal Capacity %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Compliance_Legal__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter name of compliance approving at relationship</inlineHelpText>
        <label>Compliance Legal</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Legal_Approval_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if core legal approval needed</inlineHelpText>
        <label>Core Legal Approval Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corrective_Action_Plan__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Describe correction action already taken, if applicable</inlineHelpText>
        <label>Corrective Action Plan</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Credit_Reporting_Code__c</fullName>
        <description>Credit reporting code from the customer credit bureau report.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Please enter the credit reporting code, if applicable to the customer&apos;s request.</inlineHelpText>
        <label>Credit Reporting Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Currently_Owned_by_Debt_Buyer__c</fullName>
        <inlineHelpText>Is the customer&apos;s account charred off and currently owned by a third-party debt buyer?</inlineHelpText>
        <label>Currently Owned by Debt Buyer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Hold_Time_Communications__c</fullName>
        <inlineHelpText>With extended hold times anticipated, is a digital-first and/or self-service initiative being communicated to customers? If No or N/A, skip 4.14</inlineHelpText>
        <label>4.13 Customer Hold Time Communications</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Pmt_Amount__c</fullName>
        <inlineHelpText>Enter amount of customer payment received.</inlineHelpText>
        <label>Customer Pmt Amount</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Reimbursement__c</fullName>
        <description>Select appropriate option based on customer reimbursement being required related to incident</description>
        <inlineHelpText>Select appropriate option based on customer reimbursement being required related to incident</inlineHelpText>
        <label>Customer Reimbursement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Relief_Plan_In_Place__c</fullName>
        <inlineHelpText>Has consideration been given to the enactment of a customer relief plan associated with impacted customers&apos; short term loss of income? If no, skip 3.05</inlineHelpText>
        <label>3.04 Customer Relief Plan In Place?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Service_Letter_Descriptor__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Descriptor/Number of letter(s) sent by back office agent. Please include list of all applicable letters sent and date sent for each.</inlineHelpText>
        <label>Customer Service Letter Descriptor</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Date_Additional_Feedback_Received__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter date additional feedback was received from relationship. This may impact the additional SLA based on contract or policy.</inlineHelpText>
        <label>Date Additional Feedback Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Addressed_or_Closed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date complaint responded to or incident fully resolved.</inlineHelpText>
        <label>Date Addressed or Closed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Analysis_Complete__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date RCA completed by relationship</inlineHelpText>
        <label>Date Analysis Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Answer_Provided__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the date answer provided to court and/or requesting party</inlineHelpText>
        <label>Date Answer Provided</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Approved_by_Relationship__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter date incident form signed by relationship</inlineHelpText>
        <label>Date Approved by Relationship</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Bank_Notified__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date relationship notified TBOM of incident (this is not on the RCA form sent to the relationship)</inlineHelpText>
        <label>Date Bank Notified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Due_from_Relationship__c</fullName>
        <description>Initial date feedback is due from relationship</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Initial date feedback is due from relationship</inlineHelpText>
        <label>Date Due from Relationship</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Event_Closed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Event Closed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Legal_Case_Opened__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Legal Case Opened</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Project_Commenced__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Project Commenced</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Received_by_TBOM__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter date complaint received at bank</inlineHelpText>
        <label>Date Received by TBOM</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Received_or_Served_to_TBOM__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the date legal document was received or served to TBOM</inlineHelpText>
        <label>Date Received or Served to TBOM</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_TBOM_Approved__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date final required approver at TBOM approves material.</inlineHelpText>
        <label>Date TBOM Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_TBOM_Received_Revisions__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter most recent date TBOM received revisions.</inlineHelpText>
        <label>Date TBOM Received Revisions</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Actual_Completion__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date of Actual Completion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Event__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date incident was determined to have started</inlineHelpText>
        <label>Date of Event</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Target_Completion__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date of Target Completion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Incident_Open__c</fullName>
        <formula>IF(TODAY()&gt;=  Date_Addressed_or_Closed__c ,ROUND(  Date_Addressed_or_Closed__c -  Date_Bank_Notified__c , 0), ROUND((TODAY() -  Date_Bank_Notified__c ),0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Incident Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Overdue_from_Relationship__c</fullName>
        <description>Number of days response is overdue from relationship</description>
        <formula>Response_Received_from_Relationship__c -  Date_Due_from_Relationship__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of days response is overdue from relationship. Note: if number is negative, relationship provided timely response.</inlineHelpText>
        <label>Days Overdue from Relationship</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_for_Relationship_Response__c</fullName>
        <description>Number of days relationship took to provide response and supporting documentation</description>
        <formula>Response_Received_from_Relationship__c  -  Complaint_Sent_to_Relationship__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of days relationship took to provide response and supporting documentation</inlineHelpText>
        <label>Days for Relationship Response</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Notify_Bank__c</fullName>
        <description>Number for relationship to notify bank.</description>
        <formula>Date_Bank_Notified__c -  Initial_Date_of_Detection__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of days it took the relationship to notify the bank of the incident based on the relationship&apos;s initial date of detection.</inlineHelpText>
        <label>Days to Notify Bank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Received_Remediation_Plan__c</fullName>
        <description>Date preliminary remediation plan received.</description>
        <formula>Preliminary_Remediation_Plan_Received__c -  Date_Bank_Notified__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of days from the date bank notified until the preliminary remediation plan was received.</inlineHelpText>
        <label>Days to Received Remediation Plan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Resolution__c</fullName>
        <description>Total days to resolve complaint from the date complaint received</description>
        <formula>Date_Addressed_or_Closed__c  -  Date_Received_by_TBOM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total days to resolve complaint from the date complaint received</inlineHelpText>
        <label>Days to Resolution</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deficiency_or_error_by_3rd_party_vendor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deficiency or error by 3rd party vendor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description_of_Collateral_Changes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description of Collateral &amp; Changes</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Desired_Resolution__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter customer&apos;s desired resolution</inlineHelpText>
        <label>Desired Resolution</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter details of incident</inlineHelpText>
        <label>Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Different_Location_Staff_Involved__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Different location or staff involved than normal SOPs</inlineHelpText>
        <label>Different Location/Staff Involved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disposition_of_Legal_Case__c</fullName>
        <label>Disposition of Legal Case</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Settled</fullName>
                </value>
                <value>
                    <fullName>Dismissed</fullName>
                </value>
                <value>
                    <fullName>Default Judgement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dollar_Amount_of_Impact__c</fullName>
        <inlineHelpText>Enter dollar amount of impact</inlineHelpText>
        <label>Dollar Amount of Impact</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Due_Date_Extension__c</fullName>
        <description>Tracking for due date extensions requested from the FDIC</description>
        <formula>IF(ISBLANK( Extended_Due_Date_granted_by_FDIC__c ), &quot;N/A&quot;, &quot;YES&quot;)</formula>
        <inlineHelpText>Tracking for due date extensions requested from the FDIC</inlineHelpText>
        <label>Due Date Extension</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter date response due to agency</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Duration_days__c</fullName>
        <label>Duration (days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration_of_Incident__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Length of time incident continued to occur until it was remediated or temporary control was implemented to stop incident from continuing</inlineHelpText>
        <label>Duration of Incident</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entire_Credit_Portfolio_Impacted__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if &quot;entire credit portfolio&quot; impacted</inlineHelpText>
        <label>Entire Credit Portfolio Impacted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Environmental_factors__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Environmental factors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Equipment_Issue__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Defect, malfunction, misuse of, or absence of equipment</inlineHelpText>
        <label>Equipment Issue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Escalation_Type__c</fullName>
        <label>Escalation Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Service Escalation</fullName>
                </value>
                <value>
                    <fullName>Back Office Request</fullName>
                </value>
                <value>
                    <fullName>Complaint</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Name of contingency event - if event impacts more than one relationship, ensure the name is consistent for each for reporting purposes (ex: COVID-19)</inlineHelpText>
        <label>Event Name</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extended_Due_Date_granted_by_FDIC__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter extended due date granted by FDIC, if applicable</inlineHelpText>
        <label>Extended Due Date granted by FDIC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Legal_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>External Legal needs to review and approve</description>
        <inlineHelpText>Check the box if External Legal needs to review and approve</inlineHelpText>
        <label>External Legal Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Resources__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Identify external organizations working on project with the relationship and TBOM. Ex: Mastercard, Visa, Fiserv, etc.</inlineHelpText>
        <label>External Resources</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FDIC_Closed_Letter_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FDIC Closed Letter Date</label>
        <type>Date</type>
    </fields>
</CustomObject>